--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -1,9 +1,9 @@
-.hero__subtitle img{
+.hero__subtitle img {
     width: 2.3rem;
     height: 2.3rem;
 }
 
-.hero__content h1{
+.hero__content h1 {
     font-size: 3.2rem;
     font-weight: 600;
     margin-top: 1rem;
@@ -21,7 +21,8 @@
     line-height: 2rem;
 }
 
-.hero__img-box img, .hero__img-box video {
+.hero__img-box img,
+.hero__img-box video {
     width: 100%;
     height: 350px;
     border-radius: 20px;
@@ -54,7 +55,7 @@
     font-weight: 500;
 }
 
-.experience__content h2{
+.experience__content h2 {
     font-size: 2.5rem;
     margin-top: 1rem;
     font-weight: 500;
@@ -90,7 +91,7 @@
     color: var(--text-color);
 }
 
-.experience__img img{
+.experience__img img {
     width: 90%;
 }
 
@@ -111,4 +112,44 @@
 .testimonial__title {
     font-size: 2.3rem;
     margin-top: 1rem;
+}
+
+@media only screen and (max-width:992px) {
+    .hero__content h1 {
+        font-size: 2.7rem;
+    }
+
+    .hero__img-box {
+        display: none;
+    }
+
+    .hero__video-box {
+        display: block;
+    }
+
+    .services__title,
+    .featured__tour-title,
+    .gallery__title,
+    .testimonial__title,
+    .experience__content h2 {
+        font-size: 2rem;
+    }
+
+    .experience__img {
+        margin-top: 2rem;
+    }
+}
+
+@media only screen and (max-width:576px) {
+    .hero__content h1 {
+        font-size: 1.8rem;
+    }
+
+    .services__title,
+    .featured__tour-title,
+    .gallery__title,
+    .testimonial__title,
+    .experience__content h2 {
+        font-size: 1.5rem;
+    }
 }
