--- a/frontend/src/styles/login.css
+++ b/frontend/src/styles/login.css
@@ -14,7 +14,7 @@
     position: relative;
 }
 
-.login__container{
+.login__container {
     box-shadow: rgba(17, 12, 46, 0.15) 0px 40px 100px 0px;
     margin-top: 100px;
 }
@@ -68,9 +68,35 @@
     text-align: center;
 }
 
-.login__form p a{
+.login__form p a {
     color: var(--heading-color);
     text-decoration: none;
     margin-left: 5px;
     font-weight: 500;
+}
+
+@media only screen and (max-width:768px) {
+    .login__img {
+        display: none;
+    }
+
+    .login__form {
+        width: 70%;
+        margin: auto;
+    }
+
+    .login__container {
+        padding-bottom: 3rem;
+        margin-top: 70px;
+    }
+}
+
+@media only screen and (max-width:576px) {
+    .login__form {
+        width: 100%;
+    }
+
+    .login__container {
+        padding-bottom: 1rem;
+    }
 }
