--- a/frontend/src/styles/tour-details.css
+++ b/frontend/src/styles/tour-details.css
@@ -7,11 +7,11 @@
 .tour__info,
 .tour__reviews {
     border-radius: 0.5rem;
-    border: 1px solid rgba(229,231,235);
+    border: 1px solid rgba(229, 231, 235);
     padding: 2rem;
 }
 
-.tour__info h2{
+.tour__info h2 {
     font-size: 1.5rem;
 }
 
@@ -109,7 +109,7 @@
 
 .review__item h6 {
     font-size: 1.1rem;
-    color: var(--text-color);   
+    color: var(--text-color);
 }
 
 .review__item span i {
@@ -119,4 +119,19 @@
 
 .review__item span {
     font-weight: 500;
+}
+
+@media only screen and (max-width:768px) {
+    .tour__extra-details {
+        flex-wrap: wrap;
+        row-gap: 1rem;
+    }
+
+    .tour__extra-details span {
+        font-size: 0.9rem !important;
+    }
+
+    .tour__extra-details span i {
+        font-size: 1rem;
+    }
 }
