--- a/frontend/src/components/Header/header.css
+++ b/frontend/src/components/Header/header.css
@@ -23,7 +23,7 @@
     color: var(--secondary-color);
 }
 
-.mobile_menu {
+.mobile__menu {
     font-size: 1.3rem;
     color: var(--heading-color);
     display: none;
@@ -74,7 +74,7 @@
         display: block;
     }
 
-    .mobile_menu {
+    .mobile__menu {
         display: block;
     }
 }
